Outbox output is now TypedHttpRequest/Response